--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
-    "sass": "^1.74.1",
     "vue": "^3.2.13",
     "vue-router": "^4.3.0",
     "vuex": "^4.0.2"
@@ -25,6 +24,8 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.0.3",
-    "prettier": "^2.4.1"
+    "prettier": "^2.4.1",
+    "sass": "^1.74.1",
+    "sass-loader": "^14.1.1"
   }
 }
