--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "chart.js": "^4.4.2",
-    "chartjs-chart-wordcloud": "^4.4.0",
+    "@antv/g2": "^5.1.18",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
     "vue-router": "^4.3.0",
